--- a/projects/angular-ngrx-material-starter/src/app/features/connect/connect/connect.component.html
+++ b/projects/angular-ngrx-material-starter/src/app/features/connect/connect/connect.component.html
@@ -1,28 +1,48 @@
-<div class="container">
+<div class="container" *ngIf="profileData">
     <br><br>
-    <div class="row">
-      <div class="col-sm-12"><h1>{{profileData.name}}'s {{ 'ngrxtmp.profile.title' | translate }}</h1></div>
+    <div class="row text-center">
+      <div class="col-sm-12"><h2>{{profileData.name}}'s {{ 'ngrxtmp.profile.title' | translate }}</h2></div>
     </div>
     <br>
     <ng-container>
+      <div class="row text-center">
+        <div class="col-sm-12">
+          <ngb-carousel>
+            <ng-template ngbSlide *ngFor="let image of imageData">
+              <div class="picsum-img-wrapper">
+                <img src="{{image.download_url}}" alt="{{image.name}}">
+              </div>
+            </ng-template>
+          </ngb-carousel>
+        </div>
+        <!-- <div class="col-sm-12" *ngFor="let image of imageData">
+          <img src="{{image.download_url}}" alt="{{image.name}}">
+          <br><br>
+        </div> -->
+      </div>
+      <br>
       <div class="row">
         <div class="col-md-6 group" [ngClass]="routeAnimationsElements">
-          <h2>{{ 'ngrxtmp.profile.lang' | translate }}</h2>
+          <h3>
+            <mat-icon color="accent"><fa-icon icon="code" color="accent"></fa-icon></mat-icon> 
+            &nbsp;{{ 'ngrxtmp.profile.lang' | translate }}
+          </h3>
           <div class="icon-form-field">
             <ul>
                 <li *ngFor="let language of profileData.languages">
-                    <mat-icon color="accent"><fa-icon icon="language" color="accent"></fa-icon></mat-icon>
                     {{language}}
                 </li>
             </ul>
           </div>
         </div>
         <div class="col-md-6 group" [ngClass]="routeAnimationsElements">
-            <h2>{{ 'ngrxtmp.profile.tech' | translate }}</h2>
+            <h3>
+              <mat-icon color="accent"><fa-icon icon="wrench" color="accent"></fa-icon></mat-icon>
+              {{ 'ngrxtmp.profile.tech' | translate }}
+            </h3>
             <div class="icon-form-field">
               <ul>
                   <li *ngFor="let technology of profileData.technologies">
-                      <mat-icon color="accent"><mat-icon color="accent"><fa-icon icon="window-maximize"></fa-icon></mat-icon></mat-icon>
                       {{technology}}
                   </li>
               </ul>
@@ -31,18 +51,39 @@
       </div>
       <div class="row">
         <div class="col-md-6 group" [ngClass]="routeAnimationsElements">
-            <h2>{{ 'ngrxtmp.profile.repos' | translate }}</h2>
+            <h3>
+              <mat-icon color="accent"><fa-icon icon="code-branch" color="accent"></fa-icon></mat-icon>
+              {{ 'ngrxtmp.profile.repos' | translate }}
+            </h3>
             <mat-card class="mat-card" *ngFor="let repo of profileData.repos">
-                <mat-card-title>{{repo.name}}</mat-card-title>
-                <mat-card-subtitle><a href="{{'https://github.com/mmuzio/'+repo.url}}">{{repo.url}}</a>
-                </mat-card-subtitle>
+                <mat-card-title>
+                  <a href="{{'https://github.com/mmuzio/'+repo.url}}" target="_blank" rel="noopener noreferrer">
+                    <fa-icon [icon]="['fab','github']"></fa-icon>
+                    {{repo.url}}
+                  </a>
+                </mat-card-title>
                 <mat-card-content>{{repo.description}}</mat-card-content>
             </mat-card>
         </div>
         <div class="col-md-6 group" [ngClass]="routeAnimationsElements">
-            <h2>Actions</h2>
-            <button class="accept" type="button" (click)="acceptProfile()">Accept</button>
-            <button class="reject" type="button" (click)="rejectProfile()">Reject</button>
+            <div class="actions">
+              <button
+               mat-raised-button 
+               class="actions-main" 
+               color="accent" 
+               [ngClass]="routeAnimationsElements"
+               (click)="acceptUser()">
+               <fa-icon icon="thumbs-up"></fa-icon>
+              </button>
+              <button
+               mat-raised-button 
+               class="actions-main" 
+               color="warn" 
+               [ngClass]="routeAnimationsElements"
+               (click)="rejectUser()">
+                <fa-icon icon="thumbs-down"></fa-icon>
+              </button>
+            </div>
           </div>
       </div>
     </ng-container>
