--- a/projects/angular-ngrx-material-starter/src/app/features/connect/connect/connect.component.scss
+++ b/projects/angular-ngrx-material-starter/src/app/features/connect/connect/connect.component.scss
@@ -1,5 +1,12 @@
+@import '../../../../styles-variables';
+
 ul {
     list-style: none;
+}
+
+img {
+    width: 50%;
+    height: auto;
 }
 
 .mat-card {
@@ -15,14 +22,38 @@ button {
     min-height: 50px;
 }
 
-.accept:hover {
-    background-color: white; /* Green */
-    color: #3f51b5;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+.actions {
+    text-align: center;
+    margin: 50px;
+    z-index: 1;
+
+    button {
+
+        margin: 10px 10px 10px 10px;
+        width: 40%;
+
+        &.actions-main {
+            text-transform: uppercase;
+            padding: 3px 24px;
+        }
+
+        fa-icon {
+            position: relative;
+            bottom: 1px;
+        }
+    }
 }
 
-.reject:hover {
-    background-color: white; /* Green */
-    color: #ff4081;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+@media (max-width: map-get($grid-breakpoints, sm)) {
+    img {
+        width: 90%;
+        height: auto;
+    }
+}
+
+@media (min-width: map-get($grid-breakpoints, sm)+1) and (max-width: map-get($grid-breakpoints, md)) {
+    img {
+        width: 70%;
+        height: auto;
+    }
 }
