--- a/projects/angular-ngrx-material-starter/src/styles.scss
+++ b/projects/angular-ngrx-material-starter/src/styles.scss
@@ -1,5 +1,6 @@
 @import 'styles-variables';
 
+@import "~bootstrap/dist/css/bootstrap.css";
 @import '~bootstrap/scss/bootstrap-reboot';
 @import '~bootstrap/scss/bootstrap-grid';
 @import 'styles-reset';
@@ -44,3 +45,6 @@
   @include angular-material-theme($ngrxtmp-nature-theme);
   @include custom-components-theme($ngrxtmp-nature-theme);
 }
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
