--- a/projects/angular-ngrx-material-starter/src/app/features/connect/connect/connect.component.html
+++ b/projects/angular-ngrx-material-starter/src/app/features/connect/connect/connect.component.html
@@ -6,7 +6,7 @@
     <br>
     <ng-container>
       <div class="row text-center">
-        <div class="col-sm-12">
+        <div class="col-sm-12" [ngClass]="routeAnimationsElements">
           <ngb-carousel>
             <ng-template ngbSlide *ngFor="let image of imageData">
               <div class="picsum-img-wrapper">
@@ -15,10 +15,6 @@
             </ng-template>
           </ngb-carousel>
         </div>
-        <!-- <div class="col-sm-12" *ngFor="let image of imageData">
-          <img src="{{image.download_url}}" alt="{{image.name}}">
-          <br><br>
-        </div> -->
       </div>
       <br>
       <div class="row">
@@ -50,7 +46,7 @@
           </div>
       </div>
       <div class="row">
-        <div class="col-md-6 group" [ngClass]="routeAnimationsElements">
+        <div class="col-sm-12" [ngClass]="routeAnimationsElements">
             <h3>
               <mat-icon color="accent"><fa-icon icon="code-branch" color="accent"></fa-icon></mat-icon>
               {{ 'ngrxtmp.profile.repos' | translate }}
@@ -65,7 +61,9 @@
                 <mat-card-content>{{repo.description}}</mat-card-content>
             </mat-card>
         </div>
-        <div class="col-md-6 group" [ngClass]="routeAnimationsElements">
+      </div>
+      <div class="row">
+        <div class="col-sm-12" [ngClass]="routeAnimationsElements">
             <div class="actions">
               <button
                mat-raised-button 
