--- a/projects/angular-ngrx-material-starter/src/app/features/about/about/about.component.scss
+++ b/projects/angular-ngrx-material-starter/src/app/features/about/about/about.component.scss
@@ -1,5 +1,13 @@
 @import '../../../../styles-variables';
 
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
 h1 {
   text-align: center;
   font-size: 3em;
@@ -17,7 +25,7 @@ h2 {
 
   .actions {
     text-align: center;
-    margin: 50px;
+    margin: 25px;
     z-index: 1;
 
     span {
