--- a/projects/angular-ngrx-material-starter/src/app/features/connect/connect/connect.component.scss
+++ b/projects/angular-ngrx-material-starter/src/app/features/connect/connect/connect.component.scss
@@ -7,6 +7,15 @@ ul {
     list-style: none;
 }
 
+.languages {
+    width: auto;
+    height: auto;
+    margin: 10px 10px 10px 10px;
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
 img {
     width: 50%;
     height: auto;
@@ -16,14 +25,14 @@ img {
     margin: 10px 10px 10px 10px;
 }
 
-button {
-    background-color: white;
-    margin: 10px 10px 10px 10px;
-    font-size: 16px;
-    transition-duration: 0.4s;
-    min-width: 50px;
-    min-height: 50px;
-}
+// button {
+//     background-color: white;
+//     margin: 10px 10px 10px 10px;
+//     font-size: 16px;
+//     transition-duration: 0.4s;
+//     min-width: 50px;
+//     min-height: 50px;
+// }
 
 .actions {
     text-align: center;
