Oauth authentication with GitHub now working. Refactored profile component to use new authenticated endpoint. Other service modifications.

--- a/projects/angular-ngrx-material-starter/src/app/app/app.component.html
+++ b/projects/angular-ngrx-material-starter/src/app/app/app.component.html
@@ -36,8 +36,11 @@
             </button>
           </span>
 
-          <button mat-button mat-stroked-button color="accent" *ngIf="!(isAuthenticated$ | async)" routerLink="login">
-            {{ 'ngrxtmp.menu.login' | translate }}
+          <button mat-button 
+            class="nav-button"
+            routerLink="login"
+            *ngIf="!(isAuthenticated$ | async)">
+            Login
           </button>
 
           <button *ngIf="(isAuthenticated$ | async)"
