--- a/projects/angular-ngrx-material-starter/src/app/features/login/login/login.component.html
+++ b/projects/angular-ngrx-material-starter/src/app/features/login/login/login.component.html
@@ -1,10 +1,19 @@
 <div class="container text-center">
     <div class="row">
       <div class="col-sm-12"><h1>{{ 'ngrxtmp.login.title' | translate }}</h1></div>
-    </div>
-    <br>
+    </div>     
     <ng-container *ngIf="auth$ | async as auth">
-        <form class="example-form">
+      <div class="actions">
+        <button
+         mat-raised-button 
+         class="actions-main" 
+         color="accent"
+         [ngClass]="routeAnimationsElements">
+         <a [href]="githubAuthURL">
+          <fa-icon [icon]="['fab','github']"></fa-icon> Login with Github</a>
+        </button>
+      </div> 
+        <!-- <form class="example-form">
             <mat-form-field class="example-full-width">
               <mat-label>{{ 'ngrxtmp.login.username' | translate }}</mat-label>
               <input matInput type="text" name="username" #username>
@@ -34,7 +43,7 @@
           </button>
         </div>
         
-      </form>    
+      </form>     -->
       <div class="actions">
         <button
          mat-raised-button 
@@ -44,7 +53,7 @@
          routerLink="../about">
          New to GitDate?
         </button>
-      </div>   
+      </div>
     </ng-container>
     <br><br>
   </div>
