Added matching and messaging functionality

--- a/projects/angular-ngrx-material-starter/src/app/app/app.component.html
+++ b/projects/angular-ngrx-material-starter/src/app/app/app.component.html
@@ -72,7 +72,7 @@
       <div class="footer">
         <div class="row">
           <div class="col-sm-12 links">
-            <a href="https://www.github.com/mmuzio" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.github.com/mmuzio/gitdate-frontend" target="_blank" rel="noopener noreferrer">
               <fa-icon [icon]="['fab','github']"></fa-icon>
               <span>Github</span>
             </a>
