Added documentation to features. Still need to refactor components and services for less duplication.

--- a/projects/angular-ngrx-material-starter/src/app/features/connect/connect/connect.component.html
+++ b/projects/angular-ngrx-material-starter/src/app/features/connect/connect/connect.component.html
@@ -57,6 +57,14 @@
                     <fa-icon [icon]="['fab','github']"></fa-icon>
                     {{repo.url}}
                   </a>
+                  <button 
+                      mat-raised-button
+                      class="languages"
+                      color="accent"
+                      [ngClass]="routeAnimationsElements" 
+                      (click)="starRepository(repo.url)">
+                      <fa-icon icon="star"></fa-icon>
+                  </button>
                 </mat-card-title>
                 <mat-card-content>
                   {{repo.description}}
