refactor: lazy loading modules, auth guards on modules instead of routes

--- a/projects/angular-ngrx-material-starter/src/app/features/login/oauth2/oauth2.component.html
+++ b/projects/angular-ngrx-material-starter/src/app/features/login/oauth2/oauth2.component.html
@@ -1,4 +1,6 @@
 <div class="container">
+    <p>Fetching your Oauth token!
+    </p>
     <div class="spinner">
         <mat-spinner></mat-spinner>
     </div>
