--- a/projects/angular-ngrx-material-starter/src/app/features/about/about/about.component.scss
+++ b/projects/angular-ngrx-material-starter/src/app/features/about/about/about.component.scss
@@ -82,7 +82,7 @@ h2 {
 @media (max-width: map-get($grid-breakpoints, md)) {
   .background {
     .actions {
-      margin: 50px 0;
+      margin: 20px 0;
     }
   }
 }
@@ -96,14 +96,14 @@ h2 {
     }
 
     .actions {
-      margin: 40px 0 0 0;
+      margin: 20px 0 10px 0;
 
       span {
         padding: 10px 0 20px 0;
       }
 
       a {
-        width: 100%;
+        width: 75%;
       }
     }
   }
